--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -44,6 +44,9 @@ secp256k1 = { version = "0.29.0", default-features = false, features = [
 # BLS12-381 precompiles
 blst = { version = "0.3.11", optional = true }
 
+# p256verify precompile
+p256 = { version = "0.13.2", features = ["ecdsa"] }
+
 [dev-dependencies]
 criterion = { version = "0.5" }
 rand = { version = "0.8", features = ["std"] }
